Fri Mar 10 00:10:04 2000  Tim Janik  <timj@gtk.org>

	* icons/canyon.xcf:
	* icons/filter.xcf:
	* icons/noise.xcf: New plugin icons,
	kindly submitted by Cyria Arweiler <c_arweiler@yahoo.com>.

	* davcanyondelay.c: 
	* bsefirfilter.c: 
	* bsenoise.c: include the new icons.

Wed Mar  8 16:29:56 2000  Tim Janik  <timj@gtk.org>

	* davbassfilter.[hc]: a TB-303 filter clone based on the VCF303 portions
	of gsyn v0.2. code partly copyright by Andy Sloane.
	plugin provided by David A. Bartold <foxx@mail.utexas.edu>.

	* davcanyondelay.c (dav_canyon_delay_class_init): feedback parameter
	description patch from David A. Bartold <foxx@mail.utexas.edu>.

Tue Feb 22 07:53:04 2000  Tim Janik  <timj@gtk.org>

	* davcanyondelay.[hc]: New version from David A. Bartold
	<foxx@mail.utexas.edu>. Added time adjustments to the module and
	updated it so one can set the feedback % for each "cross-over".
	Also, the low-pass filter cutoff frequency is adjustable from the GUI.
	The code's a bit cleaner too, the calc_chunk() loop now has comments.

	* davorgan.c: new version from David A. Bartold to remove a division
	operation in the calc_chunk inner loop, and to increase the
	frequency grainularity to 1/256 hz steps.

Tue Feb 22 07:26:26 2000  Tim Janik  <timj@gtk.org>

	* fldbsepattern.c: removed my test cruft from this file to leave room
	for a couple of procedure implementations from Dave Seidel
	<dave@superluminal.com>:
	Edit/Delete note,
	Edit/Clear instrument and
	Edit/Fill instrument.

Wed Feb 16 01:07:48 2000  Tim Janik  <timj@gtk.org>

	* icons/drum.c: 
	* icons/drum.xcf: 
	* icons/organ.c: 
	* icons/organ.xcf: added two more icons.

Mon Feb  7 03:54:44 2000  Tim Janik  <timj@gtk.org>

	* fldbsepattern.c (test_content_setup): use the useless number as a
	random seed value, since this procedure is actually funny to some
	extend ;)

Sun Feb  6 07:43:28 2000  Tim Janik  <timj@gtk.org>

	* davcanyondelay.[hc]: added cool new canyon delay module from